# agentic-context-engine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  example_demo.py  kayba_learned.json  kayba_test_playbook.json  pyproject.toml  questions.json  requirements-optional.txt  requirements.in  requirements.txt  setup.py  test_starter.py  test_starter_syntax.py
.github/workflows/: publish.yml  test.yml
ace/: __init__.py  adaptation.py  llm.py  playbook.py  prompts.py  prompts_v2.py  roles.py
ace/llm_providers/: __init__.py  langchain_client.py  litellm_client.py
ace/logic/: __init__.py  environment.py  generator.py  prompts.py
ace/logic_diagnosis/: __init__.py  environment.py  generator.py  prompts.py  tools.py
docs/: API_REFERENCE.md  PROMPT_ENGINEERING.md  QUICK_START.md  SETUP_GUIDE.md  TESTING_GUIDE.md  method_outline.md
examples/: advanced_prompts_v2.py  compare_v1_v2_prompts.py  kayba_ace_test.py  kayba_test.py  kayba_test_auto.py  kayba_test_demo.py  kayba_test_learning.py  kayba_test_simple.py  langchain_example.py  logic_diagnosis.py  logic_diagnosis_example.py  playbook_persistence.py  quickstart_litellm.py  simple_ace_example.py
examples/data/: logic_tester_responses.csv
reports/: questions_report.md
scripts/: README.md
tests/: conftest.py  test_langchain_client.py  test_litellm_client.py  test_logic_diagnosis.py  test_playbook.py
